--- a/ebsvol/pod.yml
+++ b/ebsvol/pod.yml
@@ -4,15 +4,15 @@ metadata:
   name: mypod
 spec:
   volumes:
-    - name: mypd
+    - name: ebs-storage
       persistentVolumeClaim:   #you mention the pvc that will be attaching to your pod
-        claimName: pv-claim    #your pvc name
+        claimName: ebs-pvc   #your pvc name
   containers:
     - name: myfrontend
       image: nginx
       volumeMounts:  #this parameter provides the actual path of container where it will be mounted on your external storage.
       - mountPath: "/share/local/nginx/"  #pathway of your data storage loc
-        name: mypd
+        name: ebs-storage
       ports:
        - containerPort: 80
          protocol: TCP
